// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatDigestCsv > emits empty strings for missing optional fields 1`] = `
"rank,score,source,company,title,location,remote,salaryMin,salaryMax,postedAt,url,id
1,0.5,greenhouse,Stripe,Software Engineer I,Remote (US),remote,,,,https://stripe.com/jobs/listing/123,greenhouse:stripe-swe-i
"
`;

exports[`formatDigestCsv > handles empty job list (header only) 1`] = `
"rank,score,source,company,title,location,remote,salaryMin,salaryMax,postedAt,url,id
"
`;

exports[`formatDigestCsv > quotes fields containing comma, quote, or newline 1`] = `
"rank,score,source,company,title,location,remote,salaryMin,salaryMax,postedAt,url,id
1,0.9,greenhouse,"Acme ""Best"" Co","Engineer, Backend","New York, NY",remote,130000,180000,2026-05-13T10:00:00.000Z,https://stripe.com/jobs/listing/123,greenhouse:stripe-swe-i
2,0.8,greenhouse,NewlineCo,"Multiline
role",Remote (US),remote,130000,180000,2026-05-13T10:00:00.000Z,https://stripe.com/jobs/listing/123,greenhouse:multiline
"
`;

exports[`formatDigestCsv > renders RFC4180 with header row 1`] = `
"rank,score,source,company,title,location,remote,salaryMin,salaryMax,postedAt,url,id
1,0.87,greenhouse,Stripe,Software Engineer I,Remote (US),remote,130000,180000,2026-05-13T10:00:00.000Z,https://stripe.com/jobs/listing/123,greenhouse:stripe-swe-i
2,0.74,lever,Plaid,Backend Engineer,"San Francisco, CA",hybrid,130000,180000,2026-05-13T10:00:00.000Z,https://jobs.lever.co/plaid/abc,lever:plaid-be
"
`;

exports[`formatDigestMarkdown > falls back to first sentence of description when no llmRationale 1`] = `
"# JobHelp daily digest - 2026-05-14

1 ranked jobs from 3 sources. Run took 42s.

## #1 Software Engineer I - Stripe (score 0.60)
- **Source:** greenhouse
- **Location:** Remote (US) · $130k-$180k
- **Posted:** 2026-05-13 (1 day ago)
- **Why this match:** Greenfield service in Go.
- **Apply:** https://stripe.com/jobs/listing/123
- **One-click tailor:** \`/tailor greenhouse:stripe-swe-i\`


---

### Sources
- greenhouse: 8 jobs in 1200ms
- lever: 2 jobs in 900ms
- adzuna: failed (auth: bad key)"
`;

exports[`formatDigestMarkdown > handles an empty digest 1`] = `
"# JobHelp daily digest - 2026-05-14

0 ranked jobs from 0 sources. Run took 42s.

_No jobs ranked above the threshold today._"
`;

exports[`formatDigestMarkdown > renders a multi-job digest 1`] = `
"# JobHelp daily digest - 2026-05-14

2 ranked jobs from 3 sources. Run took 42s.

## #1 Software Engineer I - Stripe (score 0.87)
- **Source:** greenhouse
- **Location:** Remote (US) · $130k-$180k
- **Posted:** 2026-05-13 (1 day ago)
- **Why this match:** Strong TypeScript and distributed systems match.
- **Apply:** https://stripe.com/jobs/listing/123
- **One-click tailor:** \`/tailor greenhouse:stripe-swe-i\`

## #2 Backend Engineer - Plaid (score 0.74)
- **Source:** lever
- **Location:** San Francisco, CA · $140k-$200k
- **Posted:** 2026-05-10 (4 days ago)
- **Why this match:** Backend Python and Postgres expertise aligns.
- **Apply:** https://jobs.lever.co/plaid/abc
- **One-click tailor:** \`/tailor lever:plaid-be\`


---

### Sources
- greenhouse: 8 jobs in 1200ms
- lever: 2 jobs in 900ms
- adzuna: failed (auth: bad key)"
`;

exports[`formatDigestMarkdown > renders job with missing optional fields (no salary, no postedAt) 1`] = `
"# JobHelp daily digest - 2026-05-14

1 ranked jobs from 3 sources. Run took 42s.

## #1 Software Engineer I - Stripe (score 0.55)
- **Source:** greenhouse
- **Location:** Remote (US)
- **Why this match:** No description sentence boundary here
- **Apply:** https://stripe.com/jobs/listing/123
- **One-click tailor:** \`/tailor greenhouse:stripe-swe-i\`


---

### Sources
- greenhouse: 8 jobs in 1200ms
- lever: 2 jobs in 900ms
- adzuna: failed (auth: bad key)"
`;

exports[`formatDigestMarkdown > renders salaryMin only / salaryMax only 1`] = `
"# JobHelp daily digest - 2026-05-14

2 ranked jobs from 3 sources. Run took 42s.

## #1 Software Engineer I - Stripe (score 0.60)
- **Source:** greenhouse
- **Location:** Remote (US) · $120k+
- **Posted:** 2026-05-13 (1 day ago)
- **Why this match:** Strong TypeScript and distributed systems match.
- **Apply:** https://stripe.com/jobs/listing/123
- **One-click tailor:** \`/tailor greenhouse:stripe-swe-i\`

## #2 Software Engineer I - Stripe (score 0.55)
- **Source:** greenhouse
- **Location:** Remote (US) · up to $220k
- **Posted:** 2026-05-13 (1 day ago)
- **Why this match:** Strong TypeScript and distributed systems match.
- **Apply:** https://stripe.com/jobs/listing/123
- **One-click tailor:** \`/tailor lever:x\`


---

### Sources
- greenhouse: 8 jobs in 1200ms
- lever: 2 jobs in 900ms
- adzuna: failed (auth: bad key)"
`;
